[package]
name = "themis-tracer"
# TODO Add version constraints before incrementing version
version = "0.1.0"
authors = [
"Thane Thomson <thane@informal.systems>",
"Shon Feder <shon@informal.systems>"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
[features]
# Treat warnings as a build error.
strict = []

[lib]
name = "tracer"
path = "src/lib.rs"

[[bin]]
name = "themis-tracer"
doc = false

[dependencies]
anyhow = "*"
csv = "*"
failure = "*"
glob = "*"
home = "*"
html2md = "*"
html5ever = "*"
git2 = "*"
itertools = "*"
log = "*"
kuchiki = "*"
peg = "*"
regex = "*"
rusqlite = "*"
scraper = "*" # TODO Replace with lol_html?
serde = { version = "*", features = ["derive"] }
serde_json = "*"
env_logger = "*"
structopt = "*"
tabwriter = "*"
thiserror = "*"

[dev-dependencies]
assert_cmd = "*"
textwrap = "*"
tempfile = "*"
