[package]
name = "themis-tracer"
# TODO Add version constraints before incrementing version
version = "0.1.0"
authors = [
"Thane Thomson <thane@informal.systems>",
"Shon Feder <shon@informal.systems>"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
[features]
# Treat warnings as a build error.
strict = []

[lib]
name = "tracer"
path = "src/lib.rs"

[[bin]]
name = "themis-tracer"
doc = false

[dependencies]
anyhow = "*"
csv = "*"
env_logger = "*"
failure = "*"
git2 = "*"
glob = "*"
home = "*"
html2md = "*"
html5ever = "*"
itertools = "*"
kuchiki = "*"
log = "*"
peg = "*"
regex = "*"
rusqlite = "*"
scraper = "*" # TODO Replace with lol_html?
serde = { version = "*", features = ["derive"] }
serde_json = "*"
structopt = "*"
tabwriter = "*"
thiserror = "*"
typed-html = { git = "https://github.com/bodil/typed-html", rev = "4c13ecca506887d07638cdf12d6ea6d51cd3b29a" }

[dev-dependencies]
assert_cmd = "*"
textwrap = "*"
tempfile = "*"
