[package]
name = "themis-tracer"
# TODO Add version constraints before incrementing version
version = "0.1.0"
authors = [
"Thane Thomson <thane@informal.systems>",
"Shon Feder <shon@informal.systems>"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
[features]
# Treat warnings as a build error.
strict = []

[lib]
name = "tracer"
path = "src/lib.rs"

[[bin]]
name = "themis-tracer"
doc = false

# TODO Pin to versions
[dependencies]
anyhow = "*"
csv = "*"
env_logger = "*"
failure = "*"
git2 = "*"
home = "*"
html2md = "*"
html5ever = "*"
itertools = "*"
kuchiki = "*"
lazy_static = "*"
log = "*"
peg = "*"
petgraph = "0.5.1"
regex = "*"
rusqlite = "0.24.2" # TODO Update
scraper = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
structopt = "*"
tabwriter = "*"
thiserror = "*"
walkdir = "*"

[dev-dependencies]
assert_cmd = "*"
textwrap = "*"
tempfile = "*"
glob = "*"
